# juvix

./: .clang-format  .ghci  .github_changelog_generator  .gitignore  .gitmodules  .hlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CHANGELOG.org  CNAME  CODING.md  CONTRIBUTING.md  LICENSE.md  Makefile  MiniJuvix.cabal  README.md  README.org  RELEASE.md  book.toml  cabal.hie.yaml  cabal.project  cabal.project.freeze  changelog.org  cntlines.sh  example.mjuvix  foo.lisp  hie.yaml  index.html  justfile  juvix.cabal  migrate.fish  minijuvix.agda-lib  package.yaml  print.html  searchindex.js  searchindex.json  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
agda-proofs/: minijuvix-proofs.agda-lib
app/: App.hs  AsmInterpreter.hs  CLI.hs  Command.hs  CommonOptions.hs  Evaluator.hs  GlobalOptions.hs  HaskelineJB.hs  HaskelineJH.hs  Main.hs  RegInterpreter.hs  Root.hs  TopCommand.hs  TreeEvaluator.hs  VMInterpreter.hs
assets/: highlight.js  linuwial.css  source-ayu-light.css  source-nord.css  source.css
backends/: index.html  minic.html  minihaskell.html
bench/: Base.hs  Compile.hs  Main.hs  Suites.hs  Variants.hs
bench2/: Main.hs  PolysemyPrelude.hs
compiler-architecture/: README  index.html  languages.html  pipeline.html
config/: config.json  configure.sh
docker/: Dockerfile-ghc-alpine  Dockerfile-ghc-alpine-9.2.4  Dockerfile-ghc-alpine-9.2.5  Dockerfile-ghc-alpine-9.2.6  Dockerfile-ghc-alpine-9.2.7  README.md
docs/: Agda.css  README.md  SUMMARY.md  SUMMARY.org  changelog.md  conv.sh  developer-tooling.org  main.css  quick-start.md
examples/: Example1.mjuvix  Example2.mjuvix  Example3.mjuvix  FirstMilestone.mjuvix  Prelude.mjuvix  index.html  toParse.mjuvix
getting-started/: dependencies.html  index.html  quick-start.html
gnuplot/: bars.gp
introduction/: changelog.html
juvix-mode/: flycheck-juvix.el  juvix-customize.el  juvix-highlight.el  juvix-input.el  juvix-mode.el  juvix-repl.el
language-reference/: axiom.html  comments.html  compile-blocks.html  foreign-blocks.html  functions.html  index.html  inductive-data-types.html  modules.html  termination-checking.html
latex/: juvix.sty
licenses/: readme.org
minijuvix-mode/: flycheck-minijuvix.el  minijuvix-customize.el  minijuvix-highlight.el  minijuvix-input.el  minijuvix-mode.el
notes/: Example.agda  Monomorphization.org  README.md  forTesting.md  index.html  module-scoping.org  monomorphization.html
runtime/: Makefile  Makefile.generic  PROJECT
scripts/: gen_stone_params.py  migrate-juvix-yaml.sh  nockma-stdlib-parser.sh  run_cairo_vm.sh  run_stone_prover.sh
src/: .ghci
test/: Anoma.hs  Arity.hs  Asm.hs  BackendC.hs  BackendGeb.hs  BackendMarkdown.hs  Base.hs  Casm.hs  Compilation.hs  Core.hs  Examples.hs  Format.hs  Formatter.hs  Geb.hs  Internal.hs  Isabelle.hs  Lock.hs  Main.hs  Markdown.hs  MonoJuvix.hs  Nockma.hs  Package.hs  Parsing.hs  PlainMarkdown.hs  Reachability.hs  Reg.hs  Repl.hs  Resolver.hs  Runtime.hs  Rust.hs  Scope.hs  Spec.hs  Termination.hs  Tree.hs  TypeCheck.hs  (+3 more)
(+4346 files in other folders)
