cabal-version:   2.4
name:            MiniJuvix
version:         0.0.0.0
license:         GPL-3.0-only
license-file:    LICENSE
copyright:       2021 Heliax AG
maintainer:      Jonathan Prieto-Cubides <jonathan@heliax.dev>
author:          [Jonathan Prieto-Cubides]
tested-with:     ghc ==8.10.4 ghc ==8.10.7
homepage:        https://github.com/heliaxdev/MiniJuvix
bug-reports:     https://github.com/heliaxdev/MiniJuvix/issues
description:
    A tiny dependent typed programming language for experimentation.

category:        Compilers/Interpreters
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/heliaxdev/MiniJuvix.git

library
    exposed-modules:
        MiniJuvix.Syntax.Core
        MiniJuvix.Syntax.Eval
        MiniJuvix.Utils.Prelude

    hs-source-dirs:     src
    other-modules:      Paths_MiniJuvix
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -fwrite-ide-info -hiedir=.hie

    build-depends:
        base >=4.14 && <=4.16,
        optparse-applicative >=0.16 && <=0.17,
        protolude >=0.3 && <=0.4,
        semirings >=0.6 && <=0.7,
        text >=1.2 && <=1.3

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

executable MiniJuvix
    main-is:          Main.hs
    hs-source-dirs:   src/app
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
        -fwrite-ide-info -hiedir=.hie

    build-depends:    base >=4.14 && <=4.16

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

test-suite MiniJuvix-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   src/test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.14 && <=4.16,
        MiniJuvix -any

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
